@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Optional precission argument when storing floats or 
+	  doubles in a Preferences file (STR #1381)
 	- Fixed callback not called when using arrow keys
 	  in Fl_Slider (STR #1333)
 	- Changing the shorcut of a widget in fluid now marks
